Se agregó un servicio para obtener todos los productos en oferta
